# rpncomm

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Config.cmake.in  MANIFEST  README.md  config.in
rpncomm/: REFERENCE.lst  RPN_COMM_version.inc  rpn_comm.mk  rpn_comm_stubs.sh
scripts/: gen_interfaces.sh
src/: CMakeLists.txt  IgnoreTypeKindRank.hf  REFERENCE.lst  RPN_COMM_C_interface.F90  RPN_COMM_WTIME.F90  RPN_COMM_Xpose1.F90  RPN_COMM_Xpose148.F90  RPN_COMM_Xpose2.F90  RPN_COMM_Xpose248.F90  RPN_COMM_adj_halo.F90  RPN_COMM_adj_halo.hf  RPN_COMM_adj_halo48.F90  RPN_COMM_allgather.F90  RPN_COMM_allreduce.F90  RPN_COMM_alltoall.F90  RPN_COMM_barrier.F90  RPN_COMM_bcast.F90  RPN_COMM_bcst_world.F90  RPN_COMM_bloc.F90  RPN_COMM_bloctopo.F90  RPN_COMM_c_io.c  RPN_COMM_carac.F90  RPN_COMM_coll.F90  RPN_COMM_colors.F90  RPN_COMM_comm.F90  RPN_COMM_const.F90  RPN_COMM_datyp.F90  RPN_COMM_defo.F90  RPN_COMM_diag.F90  RPN_COMM_dist.F90  RPN_COMM_exchange_halo.F90  RPN_COMM_ezwin.F90  RPN_COMM_f2c.c  RPN_COMM_finalize.F90  RPN_COMM_gather.F90  RPN_COMM_gather_e1y3.F90  RPN_COMM_gatherv.F90  RPN_COMM_getenv.c  RPN_COMM_globalsum.F90  RPN_COMM_grank.F90  (+76 more)
src/stubs/: CMakeLists.txt
tools/: mk.interfaces.pl
